Tutorial module creation:   - Introduction component created   - Show overlay button created   - Added overlay global styles   - Corrected panels z-index positions

--- a/warcommands-app/src/styles.scss
+++ b/warcommands-app/src/styles.scss
@@ -163,3 +163,21 @@ $dark-pink: #c94695;
 .rs-base {
     left: 50px !important;
 }
+
+/**
+*
+*   Tutorial overlay styles
+*
+*/
+.cdk-overlay-backdrop.cdk-overlay-backdrop-showing {
+    &.dark-backdrop {
+      background: #000;
+      opacity: 0.85 !important;
+    }
+  }
+
+.actions-bar {
+    .cdk-test {
+        z-index: 10000 !important;
+    }
+}
